# file-organizer

./: .gitignore  pyproject.toml
file_organizer/: __main__.py  cli.py  core.py
src/file_organizer/: __main__.py
tests/: conftest.py  test_cli.py  test_core.py
