[project]
name = "file-organizer"
version = "0.1.0"
description = "Орг"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.3.2",
    "typer>=0.21.1",
]

[project.scripts]
file-organizer = "file_organizer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
]
